--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: fars
-Title: What the Package Does (one line, title case)
+Title: Fatality Analysis Reporting System Functions
 Version: 0.0.0.9000
-Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
+Authors@R: person("Dmitri", "Brengauz", email = "dmitri@momus.net", role = c("aut", "cre"))
+Description: Functions to read data from the Fatality Analysis Reporting System,
+             provide a summary, and map accidents by state.    
 Depends: R (>= 3.3.3)
-License: What license is it under?
+License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
