--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,9 @@ License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: dplyr, maps, tidyr
+Suggests: knitr,
+    rmarkdown,
+    testthat
+VignetteBuilder: knitr
+
