--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@
 /*.Rcheck/
 # RStudio files
 .Rproj.user/
-# produced vignettes
-vignettes/*.html
+##### produced vignettes--necessary for assignment
+#vignettes/*.html
 vignettes/*.pdf
+########
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 # knitr and R markdown default cache directories
