--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Imports: dplyr, maps, tidyr
+Imports: dplyr, maps, tidyr, readr
 Suggests: knitr,
     rmarkdown,
     testthat
